--- a/FredChessGame/MainWindow.xaml
+++ b/FredChessGame/MainWindow.xaml
@@ -3,10 +3,36 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FredChessGame"
+        xmlns:vm="clr-namespace:FredChessGame.ViewModel"
+        xmlns:local="clr-namespace:FredChessGame.Converters"
         mc:Ignorable="d"
         Title="Fred Chess game" Height="600" Width="800">
-  <Grid Name="ChessBoard">
-    <!-- La grille sera remplie dynamiquement en C# -->
+  <Window.DataContext>
+    <vm:MainViewModel />
+  </Window.DataContext>
+  <Window.Resources>
+    <local:CaseColorConverter x:Key="CaseColorConverter"/>
+  </Window.Resources>
+
+  <Grid>
+    <ItemsControl ItemsSource="{Binding Cases}">
+      <ItemsControl.ItemsPanel>
+        <ItemsPanelTemplate>
+          <UniformGrid Rows="8" Columns="8"/>
+        </ItemsPanelTemplate>
+      </ItemsControl.ItemsPanel>
+
+      <ItemsControl.ItemTemplate>
+        <DataTemplate>
+          <Border BorderBrush="Black" BorderThickness="1"
+        Background="{Binding PositionKey, Converter={StaticResource CaseColorConverter}}">
+            <TextBlock Text="{Binding Symbole}"
+                                   FontSize="32"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"/>
+          </Border>
+        </DataTemplate>
+      </ItemsControl.ItemTemplate>
+    </ItemsControl>
   </Grid>
 </Window>
